Changed the way that images are showed

--- a/index.html
+++ b/index.html
@@ -129,6 +129,15 @@
             aspectos modernos e clássicos ao mesmo tempo, sem perder a coerência.
         </p>
         <div id="galeria-fotos">
+            <i class="material-icons" id="previous-picture">
+                keyboard_arrow_left
+            </i>
+            <div class="img-container">
+                <img src="img/anne1.jpg" id="img-atual">
+            </div>
+            <i class="material-icons" id="next-picture">
+                keyboard_arrow_right
+            </i>
         </div>
         <div class="btn-change-page">
             <a href="#page5" class="previous-page">
@@ -139,8 +148,6 @@
             </a>
         </div>
     </div>
-
-
 
 
     <script src="app.js"></script>
